k8s/apps/penpot/penpot/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
spec:
  hostnames:
    - penpot.siron.casa
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: penpot
          namespace: penpot
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: penpot-backend
          namespace: penpot
          port: 6060
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /assets
        - path:
            type: PathPrefix
            value: /ws/notifcations
    - backendRefs:
        - name: penpot-exporter
          namespace: penpot
          port: 6061
      matches:
        - path:
            type: PathPrefix
            value: /api/export
